bug fixes to prevent weird issue where iframe covers the header after 2 tests are run (what?)

--- a/app/css/pages/tests/_iframe.scss
+++ b/app/css/pages/tests/_iframe.scss
@@ -7,6 +7,10 @@
   right: 0;
   box-shadow: 2px 0 7px #333;
 
+  #iframe-spec {
+    display: none !important;
+  }
+
   #iframe-container {
     height: 100%;
     width: 100%;
@@ -24,6 +28,7 @@
 
       & > div {
         height: 100%;
+        padding-top: $header-height;
       }
     }
 
@@ -51,7 +56,7 @@
     }
 
     header {
-      position: relative;
+      position: absolute;
       background-color: #F7F7F7;
       line-height: 22px;
       padding: 5px 10px;
@@ -60,7 +65,7 @@
       border-top: 0;
       left: 0;
       right: 0;
-      height: 37px;
+      height: $header-height;
       top: 0;
       box-shadow: 0 2px 3px #888;
 
@@ -233,7 +238,6 @@
       border: 1px solid #D5D5D5;
       position: relative;
       bottom: 0;
-      top: 0;
       overflow: auto;
       display: block;
       box-shadow: 0 6px 10px #555;
